# KrakenStaking

./: .env.example  .gitignore  Anchor.toml  DEV.md  Dockerfile  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
app/src/: API.md  api.ts  indexer.ts  main.ts  server.ts  storage.ts  types.ts  utils.ts
app/src/idl/: staking.json  staking.ts
docs/: api.md  deployments.md  solana_dev.md
migrations/: deploy.ts
programs/staking/: Cargo.toml
programs/staking/src/: errors.rs  events.rs  lib.rs  states.rs
programs/staking/src/instructions/: admin.rs  initialize.rs  mod.rs  stake.rs  unstake.rs  vault.rs
scripts/: create_vault.ts  print.ts  stake.ts  unstake.ts
tests/: staking.test.ts
